syntax = "proto3";

option go_package = "github.com/leki75/iceprotobench/schema";

message ProtoTrade {
  uint64 id = 1;
  string symbol = 2;
  int32 exchange = 3;
  double price = 4;
  uint32 volume = 5;
  uint64 timestamp = 6;
  bytes conditions = 7;
  int32 tape = 8;
  int64 receivedAt = 9;
}

message ProtoTrades {
  repeated ProtoTrade trades = 1;
}

message ProtoQuote {
  string symbol = 1;
  int32 bidExchange = 2;
  double bidPrice = 3;
  uint32 bidSize = 4;
  int32 askExchange = 5;
  double askPrice = 6;
  uint32 askSize = 7;
  uint64 timestamp = 8;
  uint32 condition = 9;
  bool nbbo = 10;
  int32 tape = 11;
  int64 receivedAt = 12;
}

message ProtoQutoes {
  repeated ProtoQutoes quotes = 1;
}
